--- a/public/style.css
+++ b/public/style.css
@@ -1,33 +1,11 @@
 body {
-    background-color: green;
+    background-color: #FFFFFF;
 }
 
 #root {
     margin: 30px;
 }
 
-
-.quizBtn {
-    height: 50px;
-    background-color: rgb(207, 205, 200);
-    font-size: 1em;
-    border: 2px solid black;
-    border-radius: 5px;
-    margin: 5px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-
-.quizQuestion {
-    display: inline-block;
-    font-size: 1em;
-    font-weight: bold;
-}
 
 .headerBar {
     margin-top: 30px;
@@ -66,48 +44,6 @@ body {
     margin-top: -1px;
 }
 
-.cell-row:after {
-    clear: both;
-    content: "";
-    display: table;
-}
-
-.cell {
-    float: left;
-    background: white;
-    border: 1px solid gray;
-    font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    line-height: 30px;
-    height: 30px;
-    width: 30px;
-    margin-right: -1px;
-    margin-top: -1px;
-}
-
-.cell-victory {
-    background: lightskyblue;
-}
-
-.cell-defeat {
-    background: red;
-}
-
-.cell-to-insert {
-    background: yellow;
-}
-
-.game {
-    display: flex;
-    flex-direction: row;
-}
-
-.game-info {
-    margin-top: 30px;
-    margin-left: 20px;
-    font-weight: bold;
-}
 .btnPart {
     display: inline-flex;
 }
