--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,21 @@ body {
     margin: 30px;
 }
 
+#homeContainer{
+    left: 50%
+}
+
+    /* Shamelessly stolen from w3schools*/
+.userPost {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 30%;
+}
+      
+.userPost:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 
 .headerBar {
     margin-top: 30px;
