--- a/public/style.css
+++ b/public/style.css
@@ -6,15 +6,22 @@ body {
     margin: 30px;
 }
 
-#homeContainer{
-    left: 50%
+#HomeContainer {
+    position: relative;
+    width: 100%;
+    left: 42%;
+    align-content: center;
+    justify-content: space-evenly;
 }
 
-    /* Shamelessly stolen from w3schools*/
+
+
+/* Shamelessly stolen from w3schools*/
 .userPost {
+    padding-left: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 30%;
+    width: 40%;
 }
       
 .userPost:hover {
